[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/ui/buttons/ExitButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/labels/Title.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/buttons/DeckMakerButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/buttons/MatchmakeButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/ui/screens/TitleScreen.gd" type="Script" id=5]
[ext_resource path="res://scenes/ui/labels/Version.tscn" type="PackedScene" id=6]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0.964706, 0.827451, 0.0862745, 1 )
self_modulate = Color( 0.964706, 0.827451, 0.0862745, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -790.0
margin_top = -460.0
margin_right = 790.0
margin_bottom = 460.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="Menu" instance=ExtResource( 2 )]

[node name="Version" parent="Menu" instance=ExtResource( 6 )]

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 286.0
margin_right = 1580.0
margin_bottom = 920.0
size_flags_vertical = 3
alignment = 1

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 1580.0
margin_bottom = 634.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50
alignment = 1

[node name="MatchmakeButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 57.0
margin_right = 1580.0
margin_bottom = 197.0

[node name="DeckMakerButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_top = 247.0
margin_right = 1580.0
margin_bottom = 387.0

[node name="ExitButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 1 )]
margin_top = 437.0
margin_right = 1580.0
margin_bottom = 577.0
